# crafting-handbook

./: .gitignore  Cargo.toml  README.md  package.json  test
compilers/mscript/vm/: Cargo.toml
compilers/mscript/vm/src/codegen/: mod.rs
compilers/rjs/transpiler/attribute_marco/: Cargo.toml
compilers/rjs/transpiler/attribute_marco/src/: lib.rs
compilers/rustyc/frontend/: Cargo.toml
compilers/rustyc/frontend/src/: lexer.rs  lib.rs  main.rs  marco.rs  span.rs  token.rs
compilers/rustyc/frontend/src/ast/: declar.rs  expr.rs  mod.rs  stmt.rs
compilers/rustyc/frontend/src/lexer/: error.rs  mod.rs
compilers/rustyc/frontend/src/parser/: declar.rs  expr.rs  mod.rs  stmt.rs
compilers/rustyc/frontend/tests/: parser_test.rs
compilers/rustyc/frontend/tests/ast-serialization/: basic_type_declar.json
compilers/rustyc/optimizer/: .gitignore  Cargo.toml  README.md  debug.txt  test1.txt  text.txt
compilers/rustyc/optimizer/src/: lib.rs  main.rs
compilers/rustyc/optimizer/src/ir/: builder.rs  function.rs  instructions.rs  mod.rs  module.rs  print.rs  value.rs
compilers/rustyc/optimizer/src/ir/convert/: mod.rs  strcut_layout.rs  symbol_table.rs
compilers/rustyc/optimizer/src/ir/function/: builder.rs  mod.rs  print.rs
compilers/rustyc/optimizer/src/ir_converter/: mod.rs  symbol_table.rs
compilers/rustyc/optimizer/src/ir_converter/function/: error_map.rs  expr.rs  mod.rs
compilers/rustyc/optimizer/src/ir_optimizer/: copy_propagation.rs  domtree.rs  liveness_anaylsis.rs  mem2reg.rs  mod.rs  use_def_chain.rs  value_numbering.rs
compilers/rustyc/optimizer/src/ir_optimizer/anaylsis/: dfs_ordering.rs  domtree.rs  liveness_anaylsis.rs  mod.rs  use_def_chain.rs
compilers/rustyc/optimizer/src/ir_optimizer/anaylsis/dfs_ordering/: debugger.rs  mod.rs
compilers/rustyc/optimizer/src/ir_optimizer/anaylsis/domtree/: debugger.rs  mod.rs
compilers/rustyc/optimizer/src/ir_optimizer/anaylsis/post_domtree/: debugger.rs  mod.rs
compilers/rustyc/optimizer/src/ir_optimizer/anaylsis/use_def_chain/: debugger.rs  mod.rs
compilers/rustyc/optimizer/src/ir_optimizer/pass/: copy_propagation.rs  lazy_code_motion.rs  mem2reg.rs  mod.rs  value_numbering.rs
compilers/rustyc/optimizer/src/ir_optimizer/pass/dce/: debugger.rs  mod.rs  util.rs
compilers/rustyc/optimizer/src/ir_optimizer/pass/gvn/: debugger.rs  expr_key.rs  mod.rs  scope_table.rs
compilers/rustyc/optimizer/src/ir_optimizer/pass/lcm/: debugger.rs  (+5 more)
compilers/rustyc/optimizer/src/ir_optimizer/print_table_helper/: mod.rs
compilers/rustyc/optimizer/tests/: build_ir_graph.rs  ir_convert_test.rs  ir_convert_test_assignment_access.rs  ir_convert_test_expr.rs  ir_convert_test_fun_call.rs  ir_optimizer_test_anaylsis.rs  ir_optimizer_test_lcm_pass.rs  ir_optimizer_test_runner.rs  ir_test.rs  test_utils.rs
compilers/rustyc/optimizer/tests/ir_convert/: simple_basic_access_float.ir  simple_basic_access_int.ir  simple_basic_pointer_access.ir  simple_struct_access.ir  simple_struct_pointer_access.ir
compilers/rustyc/optimizer/tests/ir_convert/assignment-and-access/: basic_type_assignment.ir  basic_type_pointer_expr.ir  basic_type_pointer_to_pointer_assignment.ir  basic_type_pointer_to_pointer_expr.ir  struct_nested_expr.ir  struct_nested_pointer_assignment.ir  struct_type_assignment.ir  struct_type_expr.ir  struct_type_pointer_assignment.ir  struct_type_pointer_expr.ir
compilers/rustyc/optimizer/tests/ir_convert/expr/: assignment_expr.ir  cast_basic_type_expr.ir  cast_struct_pointer_expr.ir  should_cast_basic_type_implicitly.ir  sizeof_array_basic_type_expr.ir
compilers/rustyc/optimizer/tests/ir_convert/fun-call/: basic_type_return_expr.ir  call_by_function_pointer.ir  call_by_function_pointer_in_structure.ir  fib_array_dp.ir  fib_tail_call.ir  pointer_type_basic_type_return_expr.ir  struct_type_return_expr.ir  void_return_expr.ir
compilers/rustyc/optimizer/tests/ir_optimizer/lcm/: lcm_graph_from_cmu.table
compilers/rustyc/optimizer/tests/rustyc_converter_test_runner/: main.rs  test_cases.rs  test_runner.rs
labs/compiler/value-numbering/: Cargo.toml  README.md
labs/compiler/value-numbering/src/: create_graph.rs  main.rs  value_numbering.rs
(+4482 files in other folders)
