[workspace]
members = [
    # Fpr web-backend
    "website/backend",
    ##########################
    ####  Compiler Handbook
    ##########################
    # For Calculator toy lang
    "compilers/calculator",
    # For rustyc
    "compilers/rustyc/frontend",
    "compilers/rustyc/backend",
    "compilers/rustyc/interpreter",
    "compilers/rustyc/optimizer",
    # For rjs, runtime and transpiler
    "compilers/rjs/transpiler/parser",
    # For Rredis

]
resolver = "2"
