[workspace]
members = [
    # Fpr web-backend
    "website/backend",
    ##########################
    ####  Compiler Handbook
    ##########################
    # For Calculator toy lang
    "compilers/calculator",
    # For rustyc
    "compilers/rustyc/frontend",
    "compilers/rustyc/backend",
    "compilers/rustyc/interpreter",
    "compilers/rustyc/optimizer",
    # For mscript
    # "compilers/mscript/vm",
    # "compilers/mscript/optimizer"

    "compilers/zhu/zhu_ir"

]
resolver = "2"
