[package]
name = "mscript-vm"
description = "virtual runtime, bytecode and code generator for mscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rjs-parser = { version = "*", path = "../../rjs/transpiler/parser"}
