[package]
name = "rustyc-frontend"
description = "frontend of rustyc, parse C program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde = { version ="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
syn = "2.0.39"
