[package]
name = "rustyc-optimizer"
description = "rustyc ir, generate ir and opti ir, implement basic data flow anaylsis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
rustyc-frontend = {version = "*", path = "../frontend"}
serde = { version ="1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[[test]]
name="rustyc-converter-test-runner"
path='tests/rustyc_converter_test_runner/main.rs'
harness= false
