[package]
name = "rjs-attribute-marco"
description = "frontend parser marco of rjs"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
serde = { version ="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ['visit', 'full'] }
